# Dictionary

./: AUTHORS  ChangeLog  MAINTAINERS  Makefile.am  autogen.sh  configure.ac
dictionary/: ChangeLog  dict-panel.c  dict-panel.h  gedit-dictionary-plugin.c
